--- a/client/index.html
+++ b/client/index.html
@@ -7,15 +7,13 @@
   </head>
   <body>
     <div>
-    <div id="src-currency-fullname" />
-    <div id="tgt-currency-fullname" />
+      <p class="src" id="src-currency-fullname" />
+      <p class="tgt" id="tgt-currency-fullname" />
       <table>
         <tr>
           <td><input id="src-amount" type="number" step="any" min="0" value="1"></td>
           <td>
             <select id="src-currency-selector">
-              <option value="BTC" selected="selected">BTC</option>
-              <option value="ETH">ETH</option>
             </select>
           </td>
         </tr>
@@ -25,8 +23,6 @@
           </td>
           <td>
             <select id="tgt-currency-selector">
-              <option value="BTC" selected="selected">BTC</option>
-              <option value="ETH">ETH</option>
             </select>
           </td>
         </tr>
